fix body and reduce menu size on mobile

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -41,7 +41,8 @@
 
 @media(max-width:767px){
   .navbar-wagon {
-    height: 130px;
+    height: 100px;
+    line-height: 12px;
   }
 
 }
