--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -27,7 +27,7 @@ $border-radius-small: 2px;
 body {
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    max-width: 99%;
 
   a {
   color: #fff;
